--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/static/base.css"/>
     <script src="https://unpkg.com/video.js@7.4.1/dist/video.js"></script>
+    <script src="https://unpkg.com/videojs-flash/dist/videojs-flash.js"></script>
     <script src="https://unpkg.com/videojs-contrib-hls@5.15.0/dist/videojs-contrib-hls.js"></script>
 
     <meta charset="UTF-8">
